[gd_scene load_steps=3 format=3 uid="uid://ds4keir6tqmic"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_qp6bg"]

[sub_resource type="GDScript" id="GDScript_ops6g"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qp6bg")

[node name="Field" type="Control" parent="."]
anchors_preset = 0
offset_left = 56.0
offset_top = 32.0
offset_right = 648.0
offset_bottom = 600.0

[node name="Click" type="Button" parent="Field"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.443
anchor_top = 0.5
anchor_right = 0.557
anchor_bottom = 0.501
offset_left = 0.127991
offset_top = -15.0
offset_right = -0.128021
offset_bottom = 15.352
grow_horizontal = 2
grow_vertical = 2
text = "CLICK ME"
script = SubResource("GDScript_ops6g")

[node name="Shop" type="Control" parent="."]
anchors_preset = 0
offset_left = 704.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Goods" type="ScrollContainer" parent="Shop"]
layout_mode = 1
offset_top = 264.0
offset_right = 424.0
offset_bottom = 384.0

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/Goods"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Product" type="HSplitContainer" parent="Shop/Goods/VBoxContainer"]
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="Shop/Goods/VBoxContainer/Product"]
layout_mode = 2
text = "+1 за клик"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Buy" type="Button" parent="Shop/Goods/VBoxContainer/Product"]
layout_mode = 2
text = "Купить"

[node name="Product2" type="HSplitContainer" parent="Shop/Goods/VBoxContainer"]
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="Shop/Goods/VBoxContainer/Product2"]
layout_mode = 2
text = "+1 в секун"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Buy2" type="Button" parent="Shop/Goods/VBoxContainer/Product2"]
layout_mode = 2
text = "Купить"

[node name="Product3" type="HSplitContainer" parent="Shop/Goods/VBoxContainer"]
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="Shop/Goods/VBoxContainer/Product3"]
layout_mode = 2
text = "Продукт 3"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Buy3" type="Button" parent="Shop/Goods/VBoxContainer/Product3"]
layout_mode = 2
text = "Купить"

[node name="Product4" type="HSplitContainer" parent="Shop/Goods/VBoxContainer"]
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="Shop/Goods/VBoxContainer/Product4"]
layout_mode = 2
text = "Продукт 4"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Buy4" type="Button" parent="Shop/Goods/VBoxContainer/Product4"]
layout_mode = 2
text = "Купить"

[node name="Product5" type="HSplitContainer" parent="Shop/Goods/VBoxContainer"]
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="Shop/Goods/VBoxContainer/Product5"]
layout_mode = 2
text = "Продукт 5"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Buy5" type="Button" parent="Shop/Goods/VBoxContainer/Product5"]
layout_mode = 2
text = "Купить"

[node name="Money" type="RichTextLabel" parent="Shop"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 176.0
offset_right = 209.0
offset_bottom = 199.0
grow_horizontal = 2
text = "Value: "
fit_content = true

[connection signal="button_down" from="Field/Click" to="." method="_on_click_button_down"]
[connection signal="button_down" from="Shop/Goods/VBoxContainer/Product/Buy" to="." method="_on_buy_button_down"]
